# bmi-api

./: CMakeLists.txt  Dockerfile  Dockerfile.test  config.json  imt.cpp  main.cpp
.github/workflows/: ci..yml
k8s/: Dockerfile  deployment.yaml  hpa.yaml  service.yaml
tests/: CMakeLists.txt  test_imt.cpp
